--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-horizontal-timeline": "^1.5.3",
     "react-scripts": "2.1.3",
     "react-scroll-parallax": "^1.3.5",
+    "react-swipeable-views": "^0.13.1",
     "reactstrap": "^7.1.0"
   },
   "eslintConfig": {
