--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.7.0",
     "react-horizontal-timeline": "^1.5.3",
     "react-scripts": "2.1.3",
