--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/sivachandranraina/portfolio/issues"
   },
-  "homepage": "https://github.com/sivachandranraina/portfolio#readme",
+  "homepage": "https://sivachandranraina.netlify.com",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.13",
