--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
-    "react": "^16.7.0",
+    "react": "^18.2.0",
     "react-circular-progressbar": "^1.0.0",
-    "react-dom": "^16.7.0",
+    "react-dom": "^18.2.0",
     "react-horizontal-timeline": "^1.5.3",
+    "react-liquid-gauge": "^1.2.4",
     "react-scripts": "2.1.3",
-    "react-scroll-parallax": "^1.3.5",
+    "react-scroll-parallax": "^3.4.2",
     "react-swipeable-views": "^0.13.1",
     "reactstrap": "^7.1.0"
   },
