--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "@fortawesome/free-brands-svg-icons": "^5.7.1",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-horizontal-timeline": "^1.5.3",
-    "react-liquid-gauge": "^1.2.4",
+    "react-parallax-tilt": "^1.7.129",
     "react-scripts": "2.1.3",
     "react-scroll-parallax": "^3.4.2",
     "react-swipeable-views": "^0.13.1",
