--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scripts": "2.1.3",
     "react-scroll-parallax": "^3.4.2",
     "react-swipeable-views": "^0.13.1",
+    "react-text-loop-next": "0.0.3",
     "reactstrap": "^7.1.0"
   },
   "eslintConfig": {
