--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-parallax-tilt": "^1.7.129",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^5.0.1",
     "react-scroll-parallax": "^3.4.2",
     "react-text-loop-next": "0.0.3",
     "reactstrap": "^8.9.0"
@@ -51,7 +51,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node-sass": "^4.14.1",
-    "sass-loader": "^8.0.2"
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2"
   }
 }
