--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
   ],
   "devDependencies": {
     "node-sass": "^9.0.0",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "@babel/core": "7.22.5",
+    "@babel/eslint-parser": "7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/preset-env": "7.22.5"
   }
 }
