--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
