--- a/.github/workflows/master_sivachandran.yml
+++ b/.github/workflows/master_sivachandran.yml
@@ -25,14 +25,10 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          if [ ! -d "build" ]; then
-            echo "No build directory found. Creating an empty build directory to prevent upload errors."
-            mkdir build
-          fi
           npm run test --if-present
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-pages-artifact@v3
         with:
           name: node-app
           path: build/
