--- a/.github/workflows/master_sivachandran.yml
+++ b/.github/workflows/master_sivachandran.yml
@@ -28,7 +28,7 @@ jobs:
           npm run test --if-present
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: build/
@@ -42,7 +42,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-pages-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: node-app
 
